--- a/计算机网络体系结构概述.md
+++ b/计算机网络体系结构概述.md
@@ -1,15 +1,15 @@
  计算机网络体系结构
 ---
-***1 算机网络***<br>
+***1 计算机网络***<br>
 
 &emsp;通信设备和线路将地理位置不同的，功能独立的多个计算机系统（网络）互联起来，以功能完善的网络（即网络通信协议、信息交换方式、网络操作系统等等）实现网络中资源共享和信息传递的系统，因此互联网是网络的网络。  
 
-***2 算机网络组成部分***<br>
+***2 计算机网络组成部分***<br>
 
 * 边缘部分（资源子网）:所有连接在因特网上的用户组成， 用户可以进行通信：传输数据、音频、文件和资源共享。<br>
 * 核心部分（通信子网）：由大量网络连接的路由器组成，这部分是为边缘部分提供服务（连通性，数据交换）。  
   
-***3 算机网络分类***
+***3 计算机网络分类***
 * 按网络的使用者分类：公用网、专用网。
 * 从网络格局的拓扑结构分类：星形结构、总线结构、环形结构、树形结构、网状结构。
 
