--- a/计算机网络体系结构概述.md
+++ b/计算机网络体系结构概述.md
@@ -13,7 +13,7 @@
 * 按网络的使用者分类：公用网、专用网。
 * 从网络格局的拓扑结构分类：星形结构、总线结构、环形结构、树形结构、网状结构。
 
-***4 体、协议、接口、服务的概念***
+***4 实体、协议、接口、服务的概念***
 * 实体：表示任何可发送或者接收信息的硬件或软件进程。
 * 协议：一般来说，协议是指某一层协议，准确的说，它是对同等实体之间的通信制定的有关通信规则约定的集合。网络协议三要素：语义、语法、同步。  
 * 接口（服务访问点）：同一系统中相邻两层的实体进行交互的地方。  
