--- a/计算机网络体系结构概述.md
+++ b/计算机网络体系结构概述.md
@@ -7,7 +7,7 @@
 ***2 计算机网络组成部分***<br>
 
 * 边缘部分（资源子网）:所有连接在因特网上的用户组成， 用户可以进行通信：传输数据、音频、文件和资源共享。<br>
-* 核心部分（通信子网）：由大量网络连接的路由器组成，这部分是为边缘部分提供服务（连通性，数据交换）。  
+* 核心部分（通信子网）:由大量网络连接的路由器组成，这部分是为边缘部分提供服务（连通性，数据交换）。  
   
 ***3 计算机网络分类***
 * 按网络的使用者分类：公用网、专用网。
