--- a/网络层.md
+++ b/网络层.md
@@ -9,7 +9,7 @@
 ![](https://github.com/zhuqianqian1996/CS-Master-Note/blob/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E5%9B%BE%E7%89%87/IP%E5%8D%8F%E8%AE%AE.bmp)<br>
 **2 IP数据报文**  
 ![](https://github.com/zhuqianqian1996/CS-Master-Note/blob/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E5%9B%BE%E7%89%87/IP%E6%95%B0%E6%8D%AE%E6%8A%A5%E6%A0%BC%E5%BC%8F.bmp)    
-* 版本 : 有 4（IPv4）和 6（IPv6）两个值；
+* 版本 : 有 4（IPv4）和 6（IPv6）两个值。
 * 首部长度 : 占 4 位，因此最大值为 15。值为 1 表示的是 1 个 32 位字的长度，也就是 4 字节。因为固定部分长
 度为 20 字节，因此该值最小为 5。如果可选字段的长度不是 4 字节的整数倍，就用尾部的填充部分来填充。
 * 区分服务 : 用来获得更好的服务，一般情况下不使用。
