--- a/网络层.md
+++ b/网络层.md
@@ -41,7 +41,18 @@
 3、CIDR 的记法上采用在 IP 地址后面加上网络前缀长度的方法，例如 128.14.35.7/20 表示前 20 位为网络前缀。CIDR 的地址掩码可以继续称为子网掩码，子网掩码首 1 长度为网络前缀的长度。<br>
 4、一个 CIDR 地址块中有很多地址，一个 CIDR 表示的网络就可以表示原来的很多个网络，并且在路由表中只需要一个路由就可以代替原来的多个路由，减少了路由表项的数量。把这种通过使用网络前缀来减少路由表项的方式称为路由
 聚合，也称为构成超网。<br>
-5、在路由表中的项目由“网络前缀”和“下一跳地址”组成，在查找时可能会得到不止一个匹配结果，应当采用最长前缀匹配来确定应该匹配哪一个。  
+5、在路由表中的项目由“网络前缀”和“下一跳地址”组成，在查找时可能会得到不止一个匹配结果，应当采用最长前缀匹配来确定应该匹配哪一个。    
+  
+**4 地址解析协议ARP**    
+
+&emsp;&emsp;网络层实现主机之间的通信，而链路层实现具体每段链路之间的通信。因此在通信过程中，IP 数据报的源地址和目的
+地址始终不变，而 MAC 地址随着链路的改变而改变。    
+![](https://github.com/zhuqianqian1996/CS-Master-Note/blob/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E5%9B%BE%E7%89%87/ARP%E5%8D%8F%E8%AE%AE.bmp)  
+&emsp;&emsp;ARP 实现由 IP 地址得到 MAC 地址,每个主机都有一个 ARP 高速缓存，里面有本局域网上的各主机和路由器的 IP 地址到 MAC 地址的映射表。
+如果主机 A 知道主机 B 的 IP 地址，但是 ARP 高速缓存中没有该 IP 地址到 MAC 地址的映射，此时主机 A 通过广播
+的方式发送 ARP 请求分组，主机 B 收到该请求后会发送 ARP 响应分组给主机 A 告知其 MAC 地址，随后主机 A 向其
+高速缓存中写入主机 B 的 IP 地址到 MAC 地址的映射。
+
   
 **参考文献**   
 * 计算机网络, 谢希仁<br>
